# systeminit-coding-assessment-sde3

./: .gitignore  Cargo.toml  README.md  build-and-run.sh  build.rs  gulpfile.js  package-lock.json  package.json  package.json.md  tsconfig.json
public/: index.html  index.ts
src/: App.vue  MessageListModel.ts  lib.rs  main.rs  main.ts  rpc.ts
src/components/: MessageForm.vue  MessageList.vue
tests/: api_test.rs  server_test.rs
