[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
edition = "2021"
description = "Ephemeral Bulletin Board Web App"
name = "ebb-server"
version = "0.1.0"

[dependencies]
# Beatrice is an async HTTP server that runs threaded/non-async handlers.
# It's not production ready.  I wrote it.  I'm using it here to show off my skills.
# Beatrice uses Safina, an async runtime which I also wrote.
# I wrote Safina to see if it was possible to write an async runtime with `forbid(unsafe_code)`.
# I learned a lot about Rust and async Rust while writing Safina.
beatrice = { version = "^0.3.0", features = ["json"] }
# TODO: Make beatrice re-export these.
serde = "1"
serde_json = "1"
url = "2"

[dev-dependencies]
