[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
edition = "2021"
description = "Ephemeral Bulletin Board Web App"
name = "ebb-server"
version = "0.1.0"

[dependencies]
beatrice = { version = "^0.3.1", features = ["include_dir", "json"] }
include_dir = "^0.7.2"
# TODO: Make beatrice re-export these.
serde = "1"
serde_json = "1"
url = "2"

[dev-dependencies]
